CVS code -
- General:
	- Miscellaneous comment fixes. (DLR)
	- Various #include fixes.  Since proto.h includes nano.h, only
	  include the former in source files.  Also add an #include
	  guard to proto.h, and make the config.h #include in nano.h
	  match the config.h #includes everywhere else. (DLR)
- files.c:
  get_next_filename()
	- Use a long instead of an int for the number prepended to the
	  filename. (DLR)
- nano.c:
  print1opt_full()
	- If desc should be empty, allow it to be NULL instead of
	  "", since the latter is not necessarily translated as "".
	  (DLR, found by Jordi)
- utils.c:
  num_of_digits()
	- Use a ssize_t instead of an int. (DLR)
- winio.c:
  total_update()
	- Simplify to call clearok(TRUE) and wrefresh() on curscr, which
	  updates the entire screen in fewer function calls. (DLR)

GNU nano 1.3.7 - 2005.04.10
- General:
	- Miscellaneous comment fixes. (DLR)
	- After (re)initializing the terminal, make sure the cursor is
	  always turned on.  Changes to do_alt_speller(),
	  handle_sigwinch(), and main(). (DLR)
	- Make sure that all references to cut-to-end are left out when
	  NANO_SMALL is defined.  Changes to cut_to_eol(),
	  do_cut_text(), and do_statusbar_cut_text(). (DLR)
- chars.c:
  make_mbchar()
	- Remove unneeded assert. (DLR)
  move_mbleft()
	- Fix assert to reference the proper variable, so that nano
	  builds with DEBUG defined again. (Mike Frysinger, found by
	  Dmitri Vassilenko)
- files.c:
  do_insertfile()
	- Fix problem where going into the help browser at the "Insert
	  File" prompt would always result in the current answer's being
	  used as the filename afterward. (DLR)
  get_full_path()
	- Rework handling of the results of getcwd() in order to avoid
	  segfaults if they fail, and to remove uses of the nonportable
	  GNU extension where passing a size of 0 will get a string as
	  long as we need. (DLR)
  do_browser()
	- Rename variable lineno to fileline to avoid confusion. (DLR)
  do_browse_from()